--- a/make-4.2.1.zh_TW.po
+++ b/make-4.2.1.zh_TW.po
@@ -1,23 +1,22 @@
-# Make in zh_TW.
+# Translation of `make' messages to Chinese (traditional).
 # Copyright (C) 2017 Free Software Foundation, Inc.
 # This file is distributed under the same license as the make package.
-# Y.C Cheng <ycheng@linux.org.tw>, 2017
+# Y.C Cheng <mail@ycheng.net>, 2017.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: make 4.1.90\n"
+"Project-Id-Version: make 4.2.1\n"
 "Report-Msgid-Bugs-To: bug-make@gnu.org\n"
 "POT-Creation-Date: 2016-06-10 19:03-0400\n"
 "PO-Revision-Date: 2017-05-18 10:18+0800\n"
-"Last-Translator: Y.C Cheng <ycheng@linux.org.tw>\n"
+"Last-Translator: Yuan-Chen Cheng <mail@ycheng.net>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "Language: zh_TW\n"
-"X-Bugs: Report translation errors to the Language-Team address.\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.2\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Bugs: Report translation errors to the Language-Team address.\n"
 
 #: ar.c:46
 #, c-format
@@ -406,7 +405,7 @@ msgstr "windows32_openpipe(): process_init_fd() 失敗\n"
 #: function.c:1858
 #, c-format
 msgid "Cleaning up temporary batch file %s\n"
-msgstr "正在清除臨時批處理文件 %s\n"
+msgstr "正在清除暫存批次處理文件 %s\n"
 
 #: function.c:2215 function.c:2240
 msgid "file: missing filename"
@@ -621,7 +620,7 @@ msgstr "正在尋找包含中間文件'%s'的規則。\n"
 
 #: job.c:363
 msgid "Cannot create a temporary file\n"
-msgstr "無法建立臨時文件\n"
+msgstr "無法建立暫存文件\n"
 
 #: job.c:485
 msgid " (core dumped)"
@@ -771,7 +770,7 @@ msgstr "%s：未找到 shell 程序"
 
 #: job.c:2346
 msgid "spawnvpe: environment space might be exhausted"
-msgstr "spawnvpe: 環境變量空間可能會耗盡"
+msgstr "spawnvpe: 環境變數空間可能會耗盡"
 
 #: job.c:2584
 #, c-format
@@ -781,14 +780,14 @@ msgstr "$SHELL 已改變 (原為'%s'，現為'%s')\n"
 #: job.c:3022 job.c:3207
 #, c-format
 msgid "Creating temporary batch file %s\n"
-msgstr "正在建立臨時批次文件 %s\n"
+msgstr "正在建立暫存批次文件 %s\n"
 
 #: job.c:3030
 msgid ""
 "Batch file contents:\n"
 "\t@echo off\n"
 msgstr ""
-"批處理文件內容：\n"
+"批次處理文件內容：\n"
 "\t@echo off\n"
 
 #: job.c:3219
@@ -797,7 +796,7 @@ msgid ""
 "Batch file contents:%s\n"
 "\t%s\n"
 msgstr ""
-"批處理文件內容：%s\n"
+"批次處理文件內容：%s\n"
 "\t%s\n"
 
 #: job.c:3327
@@ -807,7 +806,7 @@ msgstr "%s (行 %d) 錯誤的 shell 上下文 (!unixy && !batch_mode_shell)\n"
 
 #: job.h:43
 msgid "-O[TYPE] (--output-sync[=TYPE]) is not configured for this build."
-msgstr "-O[類型] (--output-sync[=類型]) 並未配置入此 make 構建。"
+msgstr "-O[類型] (--output-sync[=類型]) 並未設定入此 make 構建。"
 
 #: load.c:60
 #, c-format
@@ -817,22 +816,22 @@ msgstr "打開全域符號表失敗：%s"
 #: load.c:97
 #, c-format
 msgid "Loaded object %s is not declared to be GPL compatible"
-msgstr "已加載的對象 %s 未聲明為 GPL 兼容"
+msgstr "已載入的對象 %s 未聲明為 GPL 兼容"
 
 #: load.c:104
 #, c-format
 msgid "Failed to load symbol %s from %s: %s"
-msgstr "從 %2$s 加載符號 %1$s 失敗：%3$s"
+msgstr "從 %2$s 載入符號 %1$s 失敗：%3$s"
 
 #: load.c:149
 #, c-format
 msgid "Empty symbol name for load: %s"
-msgstr "要加載的符號名為空：%s"
+msgstr "要載入的符號名為空：%s"
 
 #: load.c:204
 #, c-format
 msgid "Loading symbol %s from %s\n"
-msgstr "正從 %2$s 加載符號 %1$s\n"
+msgstr "正從 %2$s 載入符號 %1$s\n"
 
 #: load.c:256
 msgid "The 'load' operation is not supported on this platform."
@@ -846,7 +845,6 @@ msgstr "選項：\n"
 msgid "  -b, -m                      Ignored for compatibility.\n"
 msgstr "  -b, -m                      為相容性而忽略。\n"
 
-# ycheng
 #: main.c:341
 msgid "  -B, --always-make           Unconditionally make all targets.\n"
 msgstr "  -B, --always-make           無條件製作 (make) 所有目標。\n"
@@ -859,11 +857,11 @@ msgstr "  -C 目錄, --directory=目錄    在執行前先切換到 <目錄>。\
 
 #: main.c:346
 msgid "  -d                          Print lots of debugging information.\n"
-msgstr "  -d                          打印大量調試信息。\n"
+msgstr "  -d                          顯示大量除錯信息。\n"
 
 #: main.c:348
 msgid "  --debug[=FLAGS]             Print various types of debugging information.\n"
-msgstr "  --debug[=旗標]               打印各種調試信息。\n"
+msgstr "  --debug[=旗標]               顯示各種除錯信息。\n"
 
 #: main.c:350
 msgid ""
@@ -871,11 +869,11 @@ msgid ""
 "                              Environment variables override makefiles.\n"
 msgstr ""
 "  -e, --environment-overrides\n"
-"                              環境變量覆蓋 makefile 中的變量。\n"
+"                              環境變數覆蓋 makefile 中的變數。\n"
 
 #: main.c:353
 msgid "  --eval=STRING               Evaluate STRING as a makefile statement.\n"
-msgstr "  --eval=字串               將 <字串> 作為 makefile 語句估值。\n"
+msgstr "  --eval=字串               將 <字串> 作為 makefile 命令求值。\n"
 
 #: main.c:355
 msgid ""
@@ -887,7 +885,7 @@ msgstr ""
 
 #: main.c:358
 msgid "  -h, --help                  Print this message and exit.\n"
-msgstr "  -h, --help                  打印該消息並退出。\n"
+msgstr "  -h, --help                  顯示該消息並退出。\n"
 
 #: main.c:360
 msgid "  -i, --ignore-errors         Ignore errors from recipes.\n"
@@ -897,7 +895,7 @@ msgstr "  -i, --ignore-errors         忽略來自命令方案的錯誤。\n"
 msgid ""
 "  -I DIRECTORY, --include-dir=DIRECTORY\n"
 "                              Search DIRECTORY for included makefiles.\n"
-msgstr "  -I 目錄, --include-dir=目錄  在 <目錄> 中搜索被包含的 makefile。\n"
+msgstr "  -I 目錄, --include-dir=目錄  在 <目錄> 中搜尋被包含的 makefile。\n"
 
 #: main.c:365
 msgid "  -j [N], --jobs[=N]          Allow N jobs at once; infinite jobs with no arg.\n"
@@ -925,7 +923,7 @@ msgid ""
 "                              Don't actually run any recipe; just print them.\n"
 msgstr ""
 "  -n, --just-print, --dry-run, --recon\n"
-"                              只打印命令方案，不實際執行。\n"
+"                              只顯示命令內容，不實際執行。\n"
 
 #: main.c:377
 msgid ""
@@ -933,7 +931,7 @@ msgid ""
 "                              Consider FILE to be very old and don't remake it.\n"
 msgstr ""
 "  -o 文件, --old-file=文件, --assume-old=文件\n"
-"                              將 <文件> 當做很舊，不必重新製作。\n"
+"                              將 <文件> 當做很舊，而不重新製作。\n"
 
 #: main.c:380
 msgid ""
@@ -945,7 +943,7 @@ msgstr ""
 
 #: main.c:383
 msgid "  -p, --print-data-base       Print make's internal database.\n"
-msgstr "  -p, --print-data-base       打印 make 的內部數據庫。\n"
+msgstr "  -p, --print-data-base       顯示 make 的內部數據庫。\n"
 
 #: main.c:385
 msgid "  -q, --question              Run no recipe; exit status says if up to date.\n"
@@ -977,19 +975,19 @@ msgstr "  -t, --touch                 touch 目標（更新修改時間）而不
 
 #: main.c:398
 msgid "  --trace                     Print tracing information.\n"
-msgstr "  --trace                     打印跟蹤信息。\n"
+msgstr "  --trace                     顯示追蹤信息。\n"
 
 #: main.c:400
 msgid "  -v, --version               Print the version number of make and exit.\n"
-msgstr "  -v, --version               打印 make 的版本號並退出。\n"
+msgstr "  -v, --version               顯示 make 的版本號並退出。\n"
 
 #: main.c:402
 msgid "  -w, --print-directory       Print the current directory.\n"
-msgstr "  -w, --print-directory       打印當前目錄。\n"
+msgstr "  -w, --print-directory       顯示當前目錄。\n"
 
 #: main.c:404
 msgid "  --no-print-directory        Turn off -w, even if it was turned on implicitly.\n"
-msgstr "  --no-print-directory        關閉 -w，即使 -w 默認開啟。\n"
+msgstr "  --no-print-directory        關閉 -w，即使 -w 預設開啟。\n"
 
 #: main.c:406
 msgid ""
@@ -1001,16 +999,16 @@ msgstr ""
 
 #: main.c:409
 msgid "  --warn-undefined-variables  Warn when an undefined variable is referenced.\n"
-msgstr "  --warn-undefined-variables  當引用未定義變量的時候發出警告。\n"
+msgstr "  --warn-undefined-variables  當引用未定義變數的時候發出警告。\n"
 
 #: main.c:683
 msgid "empty string invalid as file name"
-msgstr "空字符串是無效的文件名"
+msgstr "空字串是無效的文件名"
 
 #: main.c:766
 #, c-format
 msgid "unknown debug level specification '%s'"
-msgstr "未知的調試級別定義'%s'"
+msgstr "未知的除錯級別定義'%s'"
 
 #: main.c:806
 #, c-format
@@ -1034,18 +1032,18 @@ msgstr ""
 "\n"
 "從程序 %s 產生的未處理的異常過濾器\n"
 "異常碼 = %lx\n"
-"異常標志 = %lx\n"
+"異常旗標 = %lx\n"
 "異常地址 = 0x%p\n"
 
 #: main.c:876
 #, c-format
 msgid "Access violation: write operation at address 0x%p\n"
-msgstr "訪問衝突：地址 0x%p 處的寫操作\n"
+msgstr "存取衝突：地址 0x%p 處的寫操作\n"
 
 #: main.c:877
 #, c-format
 msgid "Access violation: read operation at address 0x%p\n"
-msgstr "訪問衝突：地址 0x%p 處的讀操作\n"
+msgstr "存取衝突：地址 0x%p 處的讀操作\n"
 
 #: main.c:953 main.c:968
 #, c-format
@@ -1060,7 +1058,7 @@ msgstr "find_and_set_shell() 路徑搜索結果設置 default_shell = %s\n"
 #: main.c:1538
 #, c-format
 msgid "%s is suspending for 30 seconds..."
-msgstr "%s 正在掛起 30 秒..."
+msgstr "%s 正暫時停止 30 秒..."
 
 #: main.c:1540
 #, c-format
@@ -1081,11 +1079,11 @@ msgstr "兩次指明來自標準輸入的 makefile。"
 
 #: main.c:1843 vmsjobs.c:1252
 msgid "fopen (temporary file)"
-msgstr "fopen (臨時文件)"
+msgstr "fopen (暫存文件)"
 
 #: main.c:1849
 msgid "fwrite (temporary file)"
-msgstr "fwrite (臨時文件)"
+msgstr "fwrite (暫存文件)"
 
 #: main.c:2048
 msgid "Parallel jobs (-j) are not supported on this platform."
@@ -1134,11 +1132,11 @@ msgstr "重新執行[%u]:"
 
 #: main.c:2492
 msgid "unlink (temporary file): "
-msgstr "刪除 (臨時文件)："
+msgstr "刪除 (暫存文件)："
 
 #: main.c:2525
 msgid ".DEFAULT_GOAL contains more than one target"
-msgstr ".DEFAULT_GOAL 包含多餘一個目標"
+msgstr ".DEFAULT_GOAL 包含多餘的一個目標"
 
 #: main.c:2548
 msgid "No targets specified and no makefile found"
@@ -1222,7 +1220,7 @@ msgid ""
 "# Make data base, printed on %s"
 msgstr ""
 "\n"
-"# make 數據基礎，打印在 %s"
+"# make 數據基礎，顯示在 %s"
 
 #: main.c:3376
 #, c-format
@@ -1241,7 +1239,7 @@ msgstr "未知錯誤 %d"
 #: misc.c:508
 #, c-format
 msgid "%s: user %lu (real %lu), group %lu (real %lu)\n"
-msgstr "%s: 用戶 %lu (真實用戶 %lu), 組 %lu (真實組 %lu)\n"
+msgstr "%s: 用戶 %lu (真實用戶 %lu), 群組 %lu (真實組 %lu)\n"
 
 #: misc.c:529
 msgid "Initialized access"
@@ -1332,12 +1330,12 @@ msgstr "創始化任務服務器管道"
 #: posixos.c:90
 #, c-format
 msgid "internal error: invalid --jobserver-auth string '%s'"
-msgstr "內部錯誤：非法 --jobserver-auth 驗證字符串'%s'"
+msgstr "內部錯誤：非法 --jobserver-auth 驗證字串'%s'"
 
 #: posixos.c:93
 #, c-format
 msgid "Jobserver client (fds %d,%d)\n"
-msgstr "jobserver 客戶端（文件描述符 %d,%d）\n"
+msgstr "jobserver 客戶端（文件描述端 %d,%d）\n"
 
 #: posixos.c:109
 msgid "jobserver pipeline"
@@ -1377,7 +1375,7 @@ msgstr " (搜索路徑)"
 #: read.c:335
 #, c-format
 msgid " (don't care)"
-msgstr " (不用理)"
+msgstr " (不理會)"
 
 #: read.c:337
 #, c-format
@@ -1401,7 +1399,7 @@ msgstr "條件中含有無效語法"
 #: read.c:959
 #, c-format
 msgid "%s: failed to load"
-msgstr "%s: 加載失敗"
+msgstr "%s: 載入失敗"
 
 #: read.c:985
 msgid "recipe commences before first target"
@@ -1468,11 +1466,11 @@ msgstr "每個條件只能有一個'else'"
 
 #: read.c:1892
 msgid "Malformed target-specific variable definition"
-msgstr "畸形的針對目標的標量定義"
+msgstr "針對目標的標量定義型態錯誤"
 
 #: read.c:1950
 msgid "prerequisites cannot be defined in recipes"
-msgstr "依賴無法在方案腳本中定義"
+msgstr "前置條件無法在方案中定義"
 
 #: read.c:2009
 msgid "mixed implicit and static pattern rules"
@@ -1485,7 +1483,7 @@ msgstr "混和的隱含和普通規則"
 #: read.c:2085
 #, c-format
 msgid "target '%s' doesn't match the target pattern"
-msgstr "目標'%s'不匹配目標模式"
+msgstr "目標'%s'與目標模式不相符"
 
 #: read.c:2100 read.c:2146
 #, c-format
@@ -1588,7 +1586,7 @@ msgstr "找不到關於'%s'的隱含規則。\n"
 #: remake.c:532
 #, c-format
 msgid "Using default recipe for '%s'.\n"
-msgstr "使用'%s'的默認方案。\n"
+msgstr "使用'%s'的預設方案。\n"
 
 #: remake.c:566 remake.c:1105
 #, c-format
@@ -1693,7 +1691,7 @@ msgstr "目標文件'%s'需要以 -q 選項重新製作。\n"
 #: remake.c:1064
 #, c-format
 msgid "Using default commands for '%s'.\n"
-msgstr "使用關於'%s'的默認命令。\n"
+msgstr "使用關於'%s'的預設命令。\n"
 
 #: remake.c:1430
 #, c-format
@@ -1708,12 +1706,12 @@ msgstr "警告：文件'%s'的修改時間在未來 %s 秒後"
 #: remake.c:1647
 #, c-format
 msgid ".LIBPATTERNS element '%s' is not a pattern"
-msgstr ".LIBPATTERNS 的元素'%s'不是一個模式"
+msgstr ".LIBPATTERNS 的元素'%s'不是一個樣板"
 
 #: remote-cstms.c:122
 #, c-format
 msgid "Customs won't export: %s\n"
-msgstr "用戶不希望導出：%s\n"
+msgstr "用戶不希望匯出出：%s\n"
 
 #: rule.c:496
 msgid ""
@@ -1771,7 +1769,7 @@ msgstr "非法指令"
 
 #: signame.c:104
 msgid "Trace/breakpoint trap"
-msgstr "跟蹤/斷點陷阱"
+msgstr "追蹤/斷點陷阱"
 
 #: signame.c:109
 msgid "Aborted"
@@ -1791,11 +1789,11 @@ msgstr "浮點數異常"
 
 #: signame.c:121
 msgid "Killed"
-msgstr "已殺死"
+msgstr "已中止"
 
 #: signame.c:124
 msgid "Bus error"
-msgstr "總線錯誤"
+msgstr "Bus錯誤"
 
 #: signame.c:127
 msgid "Segmentation fault"
@@ -1803,7 +1801,7 @@ msgstr "段錯誤"
 
 #: signame.c:130
 msgid "Bad system call"
-msgstr "錯誤的系統調用"
+msgstr "錯誤的系統呼叫"
 
 #: signame.c:133
 msgid "Broken pipe"
@@ -1863,7 +1861,7 @@ msgstr "虛擬時鐘超時"
 
 #: signame.c:180
 msgid "Profiling timer expired"
-msgstr "測試時鐘超市"
+msgstr "Profiling時鐘逾期"
 
 #: signame.c:186
 msgid "Window changed"
@@ -1891,7 +1889,7 @@ msgstr "SIGPHONE"
 
 #: signame.c:211
 msgid "Resource lost"
-msgstr "資源丟失"
+msgstr "資源遺失"
 
 #: signame.c:214
 msgid "Danger signal"
@@ -1936,7 +1934,7 @@ msgstr "%s 其他已用: 總共 = %lu B / 數量 = %lu / 平均 = %lu B\n"
 #: strcache.c:322
 #, c-format
 msgid "%s other free: total = %lu B / max = %lu B / min = %lu B / avg = %hu B\n"
-msgstr "%s 其他空餘: 總共 = %lu B / 最大 = %lu B / 最小 = %lu B / 平均 = %hu B\n"
+msgstr "%s 其他未用: 總共 = %lu B / 最大 = %lu B / 最小 = %lu B / 平均 = %hu B\n"
 
 #: strcache.c:326
 #, c-format
@@ -1945,7 +1943,7 @@ msgid ""
 "%s strcache performance: lookups = %lu / hit rate = %lu%%\n"
 msgstr ""
 "\n"
-"%s strcache 性能：查找 = %lu / 命中率 = %lu%%\n"
+"%s strcache 性能：查詢 = %lu / 命中率 = %lu%%\n"
 
 #: strcache.c:328
 msgid ""
@@ -1961,7 +1959,7 @@ msgstr "自動"
 
 #: variable.c:1632
 msgid "default"
-msgstr "默認"
+msgstr "預設"
 
 #: variable.c:1635
 msgid "environment"
@@ -1977,7 +1975,7 @@ msgstr "-e 指定的環境變量"
 
 #: variable.c:1644
 msgid "command line"
-msgstr "命令行"
+msgstr "命令列"
 
 #: variable.c:1647
 msgid "'override' directive"
@@ -2006,7 +2004,7 @@ msgid ""
 "# Pattern-specific Variable Values"
 msgstr ""
 "\n"
-"# Pattern-specific 變量值"
+"# Pattern-specific 變數值"
 
 #: variable.c:1750
 msgid ""
@@ -2014,7 +2012,7 @@ msgid ""
 "# No pattern-specific variable values."
 msgstr ""
 "\n"
-"# 沒有 pattern-specific 變量的值。"
+"# 沒有 pattern-specific 變數的值。"
 
 #: variable.c:1752
 #, c-format
@@ -2023,12 +2021,12 @@ msgid ""
 "# %u pattern-specific variable values"
 msgstr ""
 "\n"
-"# %u 個 pattern-specific 變量的值"
+"# %u 個 pattern-specific 變數的值"
 
 #: variable.h:224
 #, c-format
 msgid "warning: undefined variable '%.*s'"
-msgstr "警告：未定義的變量'%.*s'"
+msgstr "警告：未定義的變數'%.*s'"
 
 #: vmsfunctions.c:91
 #, c-format
@@ -2053,12 +2051,12 @@ msgstr "DCL：%s\n"
 #: vmsjobs.c:1288
 #, c-format
 msgid "Append output to %s\n"
-msgstr "將輸出追加到 %s\n"
+msgstr "將輸出附加到 %s\n"
 
 #: vmsjobs.c:1313
 #, c-format
 msgid "Append %.*s and cleanup\n"
-msgstr "追加 %.*s 並清理\n"
+msgstr "附加 %.*s 並清理\n"
 
 #: vmsjobs.c:1326
 #, c-format
